# Soteria2

./: .gitignore  .gitmodules  CMakeLists.txt  reload.sh
SoteriaClient/: CMakeLists.txt  build.sh
SoteriaClient/src/: File.h  Parser.cpp  Parser.h  enc.cpp  enc.h  init.cpp  init.h  log.h  main.cpp  push.cpp  push.h  util.cpp  util.h
SoteriaClient/src/commands/: commands.h  init.cpp  init.h  pull.cpp  pull.h  push.cpp  push.h
SoteriaServer/: CMakeLists.txt  build.sh
SoteriaServer/src/: main.cpp
internal/ArgParse/: CMakeLists.txt  build.sh
internal/ArgParse/src/: App.cpp  App.h  BoolOption.h  Command.cpp  Command.h  IOption.cpp  IOption.h  StringOption.h  Test.cpp  Test.h
internal/Util/: CMakeLists.txt
internal/Util/src/: util.h
internal/Util/src/util/: File.h  helper.h  log.h
test/: secrets.txt
test/data/: .secretfile  .soteria
test/data/somefolder/: another.json
test/dec/: test_dec.txt
test/enc/: .secretfile  another.json  secrets.txt  test_enc.txt
test/test-server/: index.js  package-lock.json  package.json
